test/e2e/chainsaw/hybridgateway/tlsroute-backendref-cross-namespace-reference/01-tlsroute-with-grant.yaml
---
kind: TLSRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: ($tls_route_name)
  namespace: ($tls_route_namespace)
spec:
  hostnames:
    - ($fqdn)
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ($gateway_name)
  rules:
    - backendRefs:
        - name: ($echo_deployment_name)
          namespace: ($echo_deployment_namespace)
          port: 1030
---
kind: ReferenceGrant
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: ($reference_grant_name)
  namespace: ($reference_grant_namespace)
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      namespace: ($tls_route_namespace)
  to:
    - group: ""
      kind: Service
      name: ($echo_deployment_name)
