test/e2e/chainsaw/hybridgateway/tlsroute-backendref-cross-namespace-reference/06-referencegrant.yaml
---
# Re-apply the ReferenceGrant to restore cross-namespace permission. After
# this, the TLSRoute should return to ResolvedRefs=True and a KongTarget
# should be re-created.
kind: ReferenceGrant
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: ($reference_grant_name)
  namespace: ($reference_grant_namespace)
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      namespace: ($tls_route_namespace)
  to:
    - group: ""
      kind: Service
      name: ($echo_deployment_name)
